# gstu-schedule-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  deploy.bat  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  teachers.json  teachers_link.json
app/: .env  .env.sample  api.py  bot.py  cache.py  db.py  enum.py  groupes.py  migrate_to_pg.py  proxies.py  requirements.txt  utils.py
docs/: BOT_USAGE.md
migrate/: migrate_to_pg.py
teachers-parse/: api.py  groupes.py  parse.py  rewriter.py  teachers.json
