[project]
name = "gstu-schedule-bot"
version = "1.5.0"
description = "Student helper"
author = ["@Oimasi", "@DonTMover"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
]
