[project]
name = "gstu-schedule-bot"
version = "2.0.0"
description = "Student helper"
author = ["@Oimasi", "@DonTMover"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "redis>=4.5.0",
    "asyncpg>=0.30.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
]
